# rsomics-bed-unique

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bed_unique.rs  bench.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs
tests/golden/: intervals.bed
